# Nitrogen-NGC

./: CMakeLists.txt  main.n
src/: ast_node.cpp  ast_node.h  lexer.cpp  lexer.h  main.cpp  memory_utils.cpp  memory_utils.h  parser.cpp  parser.h
src/ast/: ast_node.h
src/ast/nodes/: AddressNode.cpp  AddressNode.h  LockNode.cpp  LockNode.h  assign_node.cpp  assign_node.h  binary_node.cpp  binary_node.h  call_node.cpp  call_node.h  cast_node.cpp  cast_node.h  compound_statement.cpp  compound_statement.h  definition_node.cpp  definition_node.h  do_while_node.cpp  do_while_node.h  expression_node.cpp  expression_node.h  field_node.cpp  field_node.h  float_node.cpp  float_node.h  for_node.cpp  for_node.h  function_node.cpp  function_node.h  heap_node.cpp  heap_node.h  identifier_node.cpp  identifier_node.h  if_node.cpp  if_node.h  import_node.cpp  import_node.h  index_node.cpp  index_node.h  integer_node.cpp  integer_node.h  (+20 more)
src/backends/: backend.cpp  backend.h  llvm.cpp  llvm.h  llvm_backend.cpp  llvm_backend.h
src/backends/shared/: Scope.h  block.cpp  block.h  scope.cpp  scope.h
